--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
-
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <title>LUMO - Çok Yakında</title>
-    <style>
-        body {
-            margin: 0;
-            background-color: #000;
-            color: #FFD700;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            min-height: 100vh;
-            padding: 30px;
-        }
-        img {
-            max-width: 300px;
-            margin-bottom: 40px;
-        }
-        h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 20px;
-            line-height: 1.6;
-            max-width: 800px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LUMO</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      color: gold;
+      font-family: 'Helvetica Neue', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    img {
+      max-width: 200px;
+      margin-bottom: 30px;
+    }
+    h1 {
+      font-size: 3em;
+      margin-bottom: 10px;
+    }
+    p {
+      max-width: 600px;
+      font-size: 1.2em;
+      margin: 10px 0;
+      line-height: 1.6;
+    }
+    .soon {
+      font-weight: bold;
+      margin-top: 30px;
+      font-size: 1.4em;
+    }
+  </style>
 </head>
 <body>
-    <img src="lumo-logo.png" alt="LUMO Logo">
-    <h1>LUMO</h1>
-    <p>
-        Parfüm sadece bir koku değil, bir hafızadır.<br>
-        Duyguların, anıların ve karakterin görünmeyen dili.<br><br>
-        LUMO olarak biz, bu dili yeniden yazıyoruz.<br><br>
-        İlk etapta 5 ayrı ruhla karşınızdayız:<br><br>
-        <strong>Gece. Gündüz. Ateş. Zihin. Kış.</strong><br><br>
-        Her biri; bir mevsimi, bir hissi ve bir insanı temsil ediyor.<br><br>
-        Kokunun devrimi başlıyor.<br><br>
-        <strong>Çok Yakında.</strong>
-    </p>
+  <img src="logo.png" alt="LUMO logo" />
+  <h1>LUMO</h1>
+  <p>Parfüm sadece bir koku değil, bir hafızadır.<br>
+     Duyguların, anıların ve karakterin görünmeyen dili.</p>
+  <p>LUMO olarak biz, bu dili yeniden yazıyoruz.<br>
+     İlk etapta 5 ayrı ruhla karşınızdayız:<br>
+     <strong>Gece. Gündüz. Ateş. Zihin. Kış.</strong></p>
+  <p>Her biri; bir mevsimi, bir hissi ve bir insanı temsil ediyor.<br>
+     Kokunun devrimi başlıyor.</p>
+  <div class="soon">Çok Yakında.</div>
 </body>
 </html>
