--- a/index.html
+++ b/index.html
@@ -5,30 +5,38 @@
   <title>LUMO</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
   <style>
-    * {
+    html, body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body, html {
       height: 100%;
-      font-family: 'Lora', serif;
-      color: white;
       overflow: hidden;
+      font-family: 'Lora', serif;
     }
 
-    video#bg {
+    .video-bg {
       position: fixed;
       top: 0;
       left: 0;
-      min-width: 100%;
-      min-height: 100%;
       z-index: -1;
-      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
+
+    #player {
+      width: 100vw;
+      height: 56.25vw;
+      min-height: 100vh;
+      min-width: 177.77vh;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
     .content {
+      position: relative;
+      z-index: 1;
       height: 100vh;
       display: flex;
       flex-direction: column;
@@ -36,6 +44,8 @@
       align-items: center;
       text-align: center;
       padding: 0 20px;
+      color: white;
+      background: rgba(0, 0, 0, 0.4);
     }
 
     .logo {
@@ -48,17 +58,14 @@
 
     .tagline {
       font-size: 22px;
-      color: #f2f2f2;
-      margin-bottom: 50px;
       font-style: italic;
+      margin-bottom: 50px;
     }
 
     .description {
       max-width: 900px;
       font-size: 18px;
       line-height: 1.8;
-      color: #eeeeee;
-      font-style: normal;
     }
 
     .highlight {
@@ -73,13 +80,10 @@
       font-weight: bold;
       letter-spacing: 1px;
     }
-
   </style>
 </head>
 <body>
-  <video autoplay muted loop id="bg">
-    <source src="bg.mp4" type="video/mp4">
-  </video>
+  <div class="video-bg" id="video-container"></div>
 
   <div class="content">
     <div class="logo">LUMO</div>
@@ -95,5 +99,39 @@
     </div>
     <div class="very-soon">ÇOK YAKINDA.</div>
   </div>
+
+  <!-- YouTube Player API -->
+  <script>
+    var tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    var player;
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('video-container', {
+        videoId: 'S_XguXg01HY', // GÜNCEL VİDEO ID
+        playerVars: {
+          autoplay: 1,
+          controls: 0,
+          showinfo: 0,
+          modestbranding: 1,
+          loop: 1,
+          fs: 0,
+          cc_load_policy: 0,
+          iv_load_policy: 3,
+          autohide: 1,
+          mute: 1,
+          playlist: 'S_XguXg01HY' // LOOP için tekrar yazıldı
+        },
+        events: {
+          onReady: function (e) {
+            e.target.mute();
+            e.target.playVideo();
+          }
+        }
+      });
+    }
+  </script>
 </body>
 </html>
