--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>LUMO</title>
-  
-  <!-- Yazı Fontları -->
+
+  <!-- Fontlar -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
   <!-- Stil -->
@@ -16,12 +16,11 @@
       box-sizing: border-box;
     }
 
-    body, html {
+    html, body {
       height: 100%;
       overflow: hidden;
       font-family: 'Inter', sans-serif;
       color: white;
-      text-align: center;
     }
 
     video.bg {
@@ -31,14 +30,27 @@
       min-width: 100%;
       min-height: 100%;
       object-fit: cover;
+      z-index: -2;
+    }
+
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
       z-index: -1;
     }
 
     .content {
-      position: relative;
+      position: absolute;
       top: 50%;
-      transform: translateY(-50%);
-      padding: 0 10px;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      max-width: 900px;
+      padding: 20px;
     }
 
     h1.logo {
@@ -52,8 +64,14 @@
     p {
       font-size: 20px;
       line-height: 1.6;
-      max-width: 800px;
-      margin: 10px auto;
+      margin: 10px 0;
+    }
+
+    .tagline {
+      font-style: normal;
+      margin-bottom: 30px;
+      font-size: 22px;
+      font-weight: 500;
     }
 
     .highlight {
@@ -61,31 +79,34 @@
       font-weight: 600;
     }
 
-    .tagline {
-      font-style: italic;
-      margin-bottom: 30px;
-    }
-
     .footer {
       font-weight: 600;
       margin-top: 30px;
       color: #FFD700;
     }
+
+    audio {
+      display: none;
+    }
   </style>
 </head>
 
 <body>
+
   <!-- Arka Plan Video -->
-  <video class="bg" autoplay loop muted playsinline>
+  <video class="bg" autoplay muted loop playsinline>
     <source src="bg.mp4" type="video/mp4">
   </video>
 
-  <!-- Fon Müziği (sessiz başlar) -->
+  <!-- Overlay (karartma) -->
+  <div class="overlay"></div>
+
+  <!-- Fon Müziği -->
   <audio autoplay loop>
     <source src="muzik.mp3" type="audio/mpeg">
   </audio>
 
-  <!-- Ana İçerik -->
+  <!-- İçerik -->
   <div class="content">
     <h1 class="logo">LUMO</h1>
     <p class="tagline">Bir koku değil... bir başlangıç.</p>
@@ -102,5 +123,6 @@
 
     <p class="footer">ÇOK YAKINDA.</p>
   </div>
+
 </body>
 </html>
