--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <!-- Fontlar -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-  <!-- Stil -->
   <style>
     * {
       margin: 0;
@@ -18,6 +17,7 @@
 
     html, body {
       height: 100%;
+      width: 100%;
       overflow: hidden;
       font-family: 'Inter', sans-serif;
       color: white;
@@ -25,10 +25,11 @@
 
     video.bg {
       position: fixed;
-      top: 0;
-      left: 0;
+      top: 50%;
+      left: 50%;
       min-width: 100%;
       min-height: 100%;
+      transform: translate(-50%, -50%);
       object-fit: cover;
       z-index: -2;
     }
@@ -44,34 +45,36 @@
     }
 
     .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      padding: 5vw;
       text-align: center;
-      max-width: 900px;
-      padding: 20px;
     }
 
     h1.logo {
       font-family: 'Cinzel', serif;
-      font-size: 64px;
+      font-size: 8vw;
       color: #FFD700;
       text-shadow: 0 0 20px #FFD700;
-      margin-bottom: 20px;
+      margin-bottom: 4vw;
     }
 
     p {
-      font-size: 20px;
-      line-height: 1.6;
-      margin: 10px 0;
+      font-size: 4vw;
+      line-height: 1.5;
+      margin: 2vw 0;
     }
 
     .tagline {
       font-style: normal;
-      margin-bottom: 30px;
-      font-size: 22px;
       font-weight: 500;
+      font-size: 5vw;
+      margin-bottom: 4vw;
     }
 
     .highlight {
@@ -81,12 +84,14 @@
 
     .footer {
       font-weight: 600;
-      margin-top: 30px;
       color: #FFD700;
+      margin-top: 4vw;
+      font-size: 5vw;
     }
 
-    audio {
-      display: none;
+    @media(min-width: 768px) {
+      h1.logo { font-size: 64px; }
+      p, .tagline, .footer { font-size: 22px; }
     }
   </style>
 </head>
@@ -98,13 +103,8 @@
     <source src="bg.mp4" type="video/mp4">
   </video>
 
-  <!-- Overlay (karartma) -->
+  <!-- Karartma -->
   <div class="overlay"></div>
-
-  <!-- Fon Müziği -->
-  <audio autoplay loop>
-    <source src="muzik.mp3" type="audio/mpeg">
-  </audio>
 
   <!-- İçerik -->
   <div class="content">
