--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     h1.logo {
       font-family: 'Cinzel', serif;
-      font-size: 8vw;
+      font-size: 10vw;
       color: #FFD700;
       text-shadow: 0 0 20px #FFD700;
       margin-bottom: 4vw;
@@ -66,7 +66,7 @@
 
     p {
       font-size: 4vw;
-      line-height: 1.5;
+      line-height: 1.4;
       margin: 2vw 0;
     }
 
@@ -90,8 +90,14 @@
     }
 
     @media(min-width: 768px) {
-      h1.logo { font-size: 64px; }
-      p, .tagline, .footer { font-size: 22px; }
+      h1.logo { font-size: 72px; margin-bottom: 20px; }
+      p, .tagline, .footer {
+        font-size: 22px;
+        margin: 10px 0;
+        line-height: 1.5;
+      }
+      .tagline { font-size: 24px; }
+      .footer { font-size: 24px; margin-top: 20px; }
     }
   </style>
 </head>
