--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
   </style>
 </head>
 
-<body>
+<body> <!-- Sosyal Medya Bağlantıları -->
+<div style="text-align: center; margin-top: 40px;">
+  <p style="font-family: 'Arial', sans-serif; font-size: 18px; margin-bottom: 15px;">Bizi Sosyal Medyada Takip Et</p>
+  <a href="https://www.instagram.com/lumopafum" target="_blank" style="margin: 0 10px; display: inline-block;">
+    <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" style="width:30px; vertical-align:middle;">
+  </a>
+  <a href="https://www.tiktok.com/@lumo.parfum" target="_blank" style="margin: 0 10px; display: inline-block;">
+    <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok" style="width:30px; vertical-align:middle;">
+  </a>
+</div>
+
 
   <!-- Arka Plan Video -->
   <video class="bg" autoplay muted loop playsinline>
