--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       height: 100%;
       font-family: 'Inter', sans-serif;
       color: white;
-      overflow: hidden;
     }
 
     video.bg-video {
@@ -29,10 +28,11 @@
     }
 
     .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
       padding: 20px;
     }
@@ -58,13 +58,23 @@
     }
 
     .social {
+      width: 100%;
       text-align: center;
-      margin-top: 40px;
+      padding: 15px 0;
+      background: rgba(0, 0, 0, 0.5);
+      position: fixed;
+      bottom: 0;
+      left: 0;
+    }
+
+    .social p {
+      font-size: 16px;
+      margin-bottom: 8px;
     }
 
     .social img {
       width: 28px;
-      margin: 0 10px;
+      margin: 0 8px;
       vertical-align: middle;
       transition: transform 0.3s ease;
     }
@@ -82,22 +92,22 @@
 </head>
 <body>
 
-  <!-- Video Arka Plan -->
+  <!-- Arka Plan Video -->
   <video class="bg-video" autoplay muted loop playsinline>
     <source src="bg.mp4" type="video/mp4" />
   </video>
 
-  <!-- Ana İçerik -->
+  <!-- Merkez İçerik -->
   <div class="content">
     <div class="logo">LUMO</div>
     <p class="tagline">Parfümde devrim başlıyor.</p>
     <p class="tagline">Global etki yaratacak 5 serilik koleksiyon</p>
-    <p class="footer">ÇOK YAKINDA.</p>
+    <p class="footer">ÇOK YAKINDA</p>
   </div>
 
-  <!-- Sosyal Medya -->
+  <!-- Sosyal Medya (Alta Sabit) -->
   <div class="social">
-    <p style="font-size: 18px; margin-bottom: 10px;">Bizi Sosyal Medyada Takip Et</p>
+    <p>Bizi Sosyal Medyada Takip Et</p>
     <a href="https://www.instagram.com/lumoparfum" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
     </a>
