--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
     video.bg {
       position: fixed;
-      top: 0;
-      left: 0;
-      min-width: 100vw;
-      min-height: 100vh;
+      top: 50%;
+      left: 50%;
+      min-width: 100%;
+      min-height: 100%;
+      transform: translate(-50%, -50%);
       object-fit: cover;
       z-index: -1;
     }
@@ -53,7 +54,7 @@
     .highlight { color: gold; font-weight: bold; }
 
     .social {
-      margin-top: 40px;
+      margin-top: 30px;
     }
 
     .social a {
