--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LUMO</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-YZXbgD2VZ8JxQpU2V0iGubk+qXxKlhxEyj3YvG5GZb+TQ1OVyLO0P5ZnAw+cRk9t1lrfyMcdWZ0Zd7jxAGW2Pg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body, html {
@@ -58,14 +57,21 @@
     }
 
     .social a {
-      margin: 0 15px;
-      color: white;
-      font-size: 28px;
-      transition: color 0.3s ease;
+      margin: 0 10px;
+      display: inline-block;
+      width: 30px;
+      height: 30px;
     }
 
-    .social a:hover {
-      color: gold;
+    .social svg {
+      width: 100%;
+      height: 100%;
+      fill: white;
+      transition: fill 0.3s ease;
+    }
+
+    .social a:hover svg {
+      fill: gold;
     }
 
     .follow-text {
@@ -77,7 +83,6 @@
     @media (max-width: 768px) {
       h1 { font-size: 42px; }
       p { font-size: 16px; }
-      .social a { font-size: 24px; }
     }
   </style>
 </head>
@@ -100,8 +105,16 @@
     <p><span class="bold">ÇOK YAKINDA.</span></p>
 
     <div class="social">
-      <a href="https://www.instagram.com/lumoparfum" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.tiktok.com/@lumo.parfum" target="_blank"><i class="fab fa-tiktok"></i></a>
+      <a href="https://www.instagram.com/lumoparfum" target="_blank" aria-label="Instagram">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.86-30.86C293.41,123.51,224,123.51,224,123.51s-69.41,0-93.86,7.29a54,54,0,0,0-30.86,30.86C92.51,148.59,92.51,224,92.51,224s0,69.41,7.29,93.86a54,54,0,0,0,30.86,30.86c24.45,7.29,93.86,7.29,93.86,7.29s69.41,0,93.86-7.29a54,54,0,0,0,30.86-30.86c7.29-24.45,7.29-93.86,7.29-93.86S356,148.59,348.71,123.66ZM224,338.66A82.66,82.66,0,1,1,306.66,256,82.75,82.75,0,0,1,224,338.66Zm85.33-148A19.33,19.33,0,1,1,328.66,171.33,19.33,19.33,0,0,1,309.33,190.66Z"/>
+        </svg>
+      </a>
+      <a href="https://www.tiktok.com/@lumo.parfum" target="_blank" aria-label="TikTok">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path d="M448,209.3v125.2A208.5,208.5,0,0,1,259.2,544C116.5,544,0,427.5,0,284.8S116.5,25.6,259.2,25.6a209.4,209.4,0,0,1,78.5,14.8v126.1a82.3,82.3,0,0,0,45.4,12.6h64.9v104.2ZM180.7,437.2a74.6,74.6,0,1,0,74.6-74.6h0V185.1a117.3,117.3,0,0,0-49.7-10.7c-65.5,0-118.6,53.1-118.6,118.6s53.1,118.6,118.6,118.6a117.2,117.2,0,0,0,49.7-10.7v-90.6a42.4,42.4,0,1,1-42.4-42.4,40.4,40.4,0,0,1,14.2,2.5v-51.7a91.3,91.3,0,1,0,0,181.2v20.3a117.3,117.3,0,0,0-49.7-10.7Z"/>
+        </svg>
+      </a>
       <div class="follow-text">Bizi takip etmeyi unutmayın!</div>
     </div>
   </div>
