--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     }
     html, body {
       height: 100%;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
       color: white;
-      text-align: center;
       overflow: hidden;
+    }
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     video {
       position: fixed;
@@ -27,25 +31,23 @@
       z-index: -1;
     }
     .content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      text-align: center;
       padding: 20px;
-      background-color: rgba(0,0,0,0.4);
+      max-width: 90%;
+      background-color: rgba(0, 0, 0, 0.35);
+      border-radius: 10px;
     }
     h1 {
       font-size: 4em;
       font-style: italic;
-      font-weight: 600;
+      font-weight: 900;
       color: #FFD700;
+      text-shadow: 2px 2px 10px rgba(255, 215, 0, 0.4);
       margin-bottom: 25px;
     }
     p {
       font-size: 1.2em;
       margin: 10px 0;
-      max-width: 90%;
       line-height: 1.6;
     }
     .highlight {
@@ -56,16 +58,16 @@
       margin-top: 25px;
     }
     .social a {
-      margin: 0 12px;
+      margin: 0 10px;
       display: inline-block;
     }
     .social img {
-      width: 38px;
-      height: 38px;
+      width: 40px;
+      height: 40px;
       transition: transform 0.3s ease;
     }
     .social img:hover {
-      transform: scale(1.1);
+      transform: scale(1.15);
     }
     .follow-text {
       margin-top: 10px;
