--- a/index.html
+++ b/index.html
@@ -111,4 +111,38 @@
     </div>
   </div>
 </body>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px; font-family: sans-serif; text-align: center; max-width: 1400px; margin: auto; padding: 20px;">
+
+  <div style="width: 250px;">
+    <img src="https://raw.githubusercontent.com/lumoparfum/lumoparfum/main/gece.png" alt="LUMO Gece No.1" style="width: 100%;">
+    <h3>LUMO Gece No.1</h3>
+    <p style="font-size: 14px;">Şehir sessizliğe bürünürken, derin ve karizmatik bir iz bırakır. Gecenin kendisi gibi gizemli ve çekici.</p>
+  </div>
+
+  <div style="width: 250px;">
+    <img src="https://raw.githubusercontent.com/lumoparfum/lumoparfum/main/gündüz.png" alt="LUMO Gündüz No.2" style="width: 100%;">
+    <h3>LUMO Gündüz No.2</h3>
+    <p style="font-size: 14px;">Yeni bir günün taze enerjisi. Temiz, doğal ve ışıkla dans eden bir ferahlık hissi sunar.</p>
+  </div>
+
+  <div style="width: 250px;">
+    <img src="https://raw.githubusercontent.com/lumoparfum/lumoparfum/main/ateş.png" alt="LUMO Ateş No.3" style="width: 100%;">
+    <h3>LUMO Ateş No.3</h3>
+    <p style="font-size: 14px;">İçinde taşıdığın tutkuyu serbest bırakır. Sıcak, iddialı ve asla unutulmayacak bir etki.</p>
+  </div>
+
+  <div style="width: 250px;">
+    <img src="https://raw.githubusercontent.com/lumoparfum/lumoparfum/main/zihin.png" alt="LUMO Zihin No.4" style="width: 100%;">
+    <h3>LUMO Zihin No.4</h3>
+    <p style="font-size: 14px;">Sadelikten gelen bir zarafet. Dingin ama güçlü, düşündürürken büyüleyen bir karakter.</p>
+  </div>
+
+  <div style="width: 250px;">
+    <img src="https://raw.githubusercontent.com/lumoparfum/lumoparfum/main/kış.png" alt="LUMO Kış No.5" style="width: 100%;">
+    <h3>LUMO Kış No.5</h3>
+    <p style="font-size: 14px;">Soğuk havada yakıcı bir dokunuş. Derin, sakin ve klasik bir kış imzası.</p>
+  </div>
+
+</div>
+
 </html>
