--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     }
 
     .logo {
-      font-size: 40px;
+      font-size: 56px;
       font-weight: bold;
+      font-style: italic;
       color: yellow;
       margin-top: 40px;
     }
@@ -59,10 +60,26 @@
       margin-top: 8px;
     }
 
-    .social-icons img {
-      width: 30px;
+    .social-icons {
+      margin-top: 20px;
+    }
+
+    .social-icons a img {
+      width: 32px;
       margin: 0 10px;
       filter: brightness(0) invert(1);
+    }
+
+    @media (max-width: 600px) {
+      .product-container {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .social-icons {
+        display: flex;
+        justify-content: center;
+      }
     }
   </style>
 </head>
@@ -83,10 +100,10 @@
 
   <div class="social-icons">
     <a href="https://www.instagram.com/lumoparfum" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
     </a>
-    <a href="https://www.tiktok.com/@lumoparfum" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
+    <a href="https://www.tiktok.com/@lumo.parfum" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/TikTok_logo.svg" alt="TikTok">
     </a>
   </div>
 
