--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       padding: 0;
       background-color: black;
       color: white;
-      font-family: sans-serif;
+      font-family: 'Arial', sans-serif;
       text-align: center;
     }
 
@@ -62,11 +62,14 @@
 
     .social-icons {
       margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
     }
 
-    .social-icons a img {
-      width: 32px;
-      margin: 0 10px;
+    .social-icons img {
+      width: 40px;
+      height: 40px;
       filter: brightness(0) invert(1);
     }
 
@@ -77,7 +80,7 @@
       }
 
       .social-icons {
-        display: flex;
+        flex-direction: row;
         justify-content: center;
       }
     }
@@ -100,10 +103,10 @@
 
   <div class="social-icons">
     <a href="https://www.instagram.com/lumoparfum" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram">
     </a>
     <a href="https://www.tiktok.com/@lumo.parfum" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/TikTok_logo.svg" alt="TikTok">
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok">
     </a>
   </div>
 
