--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
       margin-top: 8px;
     }
 
+    .product-price {
+      font-size: 14px;
+      color: #fff;
+      font-weight: bold;
+      margin-top: 6px;
+    }
+
     .social-icons {
       margin-top: 20px;
       display: flex;
@@ -73,6 +80,12 @@
       filter: brightness(0) invert(1);
     }
 
+    .follow-text {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #ccc;
+    }
+
     @media (max-width: 600px) {
       .product-container {
         flex-direction: column;
@@ -82,6 +95,10 @@
       .social-icons {
         flex-direction: row;
         justify-content: center;
+      }
+
+      .follow-text {
+        text-align: center;
       }
     }
   </style>
@@ -109,6 +126,7 @@
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok">
     </a>
   </div>
+  <div class="follow-text">Bizi takip etmeyi unutmayın!</div>
 
   <div class="product-container">
 
@@ -116,30 +134,35 @@
       <img src="gece.png" alt="Gece No.1">
       <div class="product-title">Gece No.1</div>
       <div class="product-desc">Şehir sessizliğe bürünürken, derin ve karizmatik bir iz bırakır. Gecenin kendisi gibi gizemli ve etkileyici.</div>
+      <div class="product-price">Lansman fiyatı: 890₺</div>
     </div>
 
     <div class="product">
       <img src="gunduz.png" alt="Gündüz No.2">
       <div class="product-title">Gündüz No.2</div>
       <div class="product-desc">Yeni bir günün taze enerjisi. Temiz, doğal ve ışıkla dans eden bir ferahlık hissi sunar.</div>
+      <div class="product-price">Lansman fiyatı: 890₺</div>
     </div>
 
     <div class="product">
       <img src="ates.png" alt="Ateş No.3">
       <div class="product-title">Ateş No.3</div>
       <div class="product-desc">İçinde taşıdığın tutkuyu serbest bırakır. Sıcak, iddialı ve asla unutulmayacak bir etki.</div>
+      <div class="product-price">Lansman fiyatı: 890₺</div>
     </div>
 
     <div class="product">
       <img src="zihin.png" alt="Zihin No.4">
       <div class="product-title">Zihin No.4</div>
       <div class="product-desc">Sadelikten gelen bir zarafet. Dingin ama güçlü, düşündürürken büyüleyen bir karakter.</div>
+      <div class="product-price">Lansman fiyatı: 890₺</div>
     </div>
 
     <div class="product">
       <img src="kis.png" alt="Kış No.5">
       <div class="product-title">Kış No.5</div>
       <div class="product-desc">Soğuk havada yakıcı bir dokunuş. Derin, sakin ve klasik bir kış imzası.</div>
+      <div class="product-price">Lansman fiyatı: 890₺</div>
     </div>
 
   </div>
